--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Escola de Robótica</title>
 </head>
 <body>
-    <h1>Escola de Robótica 1</1h1> 
+    <h1>Escola de Robótica 1</h1> 
 </body>
 </html>
