--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escola de Robótica</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Escola de Robótica 1</h1> 
+    <header>
+        <h1>Robótica Educacional</h1> 
+    </header>     
 </body>
 </html>
