--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Robótica Educacional</h1> 
-    </header>     
+    <header class="cabeçalho">
+        <img class="cabeçalho-imagem" src="robot 1.png" alt="robo em pé">
+        <h1 class="cabeçalho-título">Robótica Educacional</h1>
+        <ul class="cabeçalho-lista">
+            <li class="cabeçalho-lista-item1">Quem Somos</li>
+            <li class="cabeçalho-lista-item2">Equipe</li>
+        </ul>
+    </header>
+
+    <section class="Seção1">
+        <div class="Seção1-div-conteúdo">
+            <h2 class="Seção1-Título">Sobre Nós</h2>
+            <p class="Seção1-parágrafo1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut sed ullam accusantium dolore iste odio at assumenda fugiat, aliquid voluptatibus amet reiciendis exercitationem iure earum, reprehenderit consequuntur enim soluta! Architecto.</p>
+            <p class="Seção1-parágrafo2">Mussum Ipsum, cacilds vidis litro abertis. Pellentesque nec nulla ligula. Donec gravida turpis a vulputate ultricies. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. Atirei o pau no gatis, per gatis num morreus. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per.</p>
+        </div>
+        <img class="Seção1-imagem" src="Robotics-cuate.png" alt="Um robô trabalhando">
+    </section>
 </body>
-</html>
+</html
