--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabeçalho">
-        <img class="cabeçalho-imagem" src="robot 1.png" alt="robo em pé">
+        <img class="cabeçalho-imagem" src="robot.png" alt="robo em pé">
         <h1 class="cabeçalho-título">Robótica Educacional</h1>
         <ul class="cabeçalho-lista">
             <li class="cabeçalho-lista-item1">Quem Somos</li>
